# JC_tree_Rust_Project

./: .gitignore  README.md
000_basic/: Cargo.toml
111_semi_adv/: Cargo.toml
111_semi_adv/src/: main.rs  treelibs.rs
advanced_implementation/: ciao  my_tree.txt  notes.txt  rustfmt.toml
advanced_implementation/src/: main.rs  treelibs.rs
basic_implementation/: Cargo.toml
basic_implementation/src/: main.rs  treeprint.rs
f_000_basic/src/: treefile.rs
f_111_semi/: Cargo.toml  my_tree.txt  notes.txt  rustfmt.toml
f_111_semi/src/: main.rs  treelibs.rs
